  as opposed to session.
- (:pr:`81`) Support for JSON/Single-Page-Application. This completes support
  for non-form based access to Flask-Security. See PR for details. (jwag956)
- (:pr:`79` Add POST logout to enhance JSON usage (jwag956).
- (:pr:`73`) Fix get_user for various DBs (jwag956).
  This is a more complete fix than in opr #633.
- (:pr:`78`) Add formal openapi API spec (jwag956).

Version 3.1.0
-------------

Released May 29th 2017

- (opr #487) Use Security.render_template in mails too (noirbizarre)
- (opr #679) Optimize DB accesses by using an SQL JOIN when retrieving a user. (nfvs)
- (opr #697) Add base template to security templates (grihabor)
- (opr #633) datastore: get user by numeric identity attribute (jirikuncar)
- (opr #703) bugfix: support application factory pattern (briancappello)
- (opr #714) Make SECURITY_PASSWORD_SINGLE_HASH a list of scheme ignoring double hash (noirbizarre )
- (opr #717) Allow custom login_manager to be passed in to Flask-Security (jaza)
- (opr #727) Docs for OAauth2-based custom login manager (jaza)
- (opr #779) core: make the User model check the password (mklassen)
- (opr #730) Customizable send_mail (abulte)
- (opr #726) core: fix default for UNAUTHORIZED_VIEW (jirijunkar)

These should all be backwards compatible.

Possible compatibility issues:

- #487 - prior to this, render_template() was overiddable for views, but not
  emails. If anyone actually relied on this behavior, this has changed.
- #703 - get factory pattern working again. There was a very complex dance between
  Security() instantiation and init_app regarding kwargs. This has been rationalized (hopefully).

Performance improvements:

- #679 - for sqlalchemy, for each request, there would be 2 DB accesses - now
  there is one.

Testing:
For datastores operations, Sqlalchemy, peewee, pony were all tested against sqlite,
postgres, and mysql real databases.


Version 3.0.2
-------------

Released April 30th 2019
